# python-project-template

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  cookiecutter.json  mypy.ini  pylintrc  pyproject.toml  python_project_template.py  setup.py
.github/workflows/: python-app.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_project_creation.py  util.py
{{cookiecutter.package_name}}/: .isort.cfg  Makefile  README.md  mypy.ini  pylintrc  pyproject.toml  setup.py
{{cookiecutter.package_name}}/tests/: test_dummy.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: dummy.py  metadata.py
